# branching

./: .gitattributes  .gitignore  .lgtm.yml  CODE_OF_CONDUCT.md  README.md  example-part1-data.ipynb  example-part2-model-building.sh  example-part3-testing.sh  pyproject.toml  requirements.txt  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
branching/: __init__.py  build_sparse_models.r  create_datasets.py  feature_names.py  sampling.py  utilities.py
branching/test-methods/: CMakeLists.txt
branching/test-methods/src/: branch_sparse.c  branch_sparse.h  cmain.c
data/setcover/samples/0/train/: sample_1.pkl  sample_10.pkl  sample_11.pkl  sample_12.pkl  sample_13.pkl  sample_14.pkl  sample_15.pkl  sample_16.pkl  sample_17.pkl  sample_18.pkl  sample_19.pkl  sample_2.pkl  (+47 more)
devtools/: README.md
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
ecole/libecole/: CMakeLists.txt
ecole/libecole/src/observation/: khalil-2016.cpp  node-bipartite-candidate.cpp
ecole/libecole/src/utility/: math.hpp
logs/: setcover.txt
results/setcover/glmnet_lasso/: instance_1.lp_0.csv
results/setcover/l0learn_l0l1/: instance_1.lp_0.csv
results/setcover/l0learn_l0l2/: instance_1.lp_0.csv
results/setcover/relpscost/: instance_1.lp_0.csv
sparse-models/setcover/0/: glmnet_lasso_log.txt  glmnet_lasso_model.txt  glmnet_lasso_model_verbose.csv  l0learn_l0l1_log.txt  l0learn_l0l1_model.txt  l0learn_l0l1_model_verbose.csv  l0learn_l0l2_log.txt  l0learn_l0l2_means_sd.csv  l0learn_l0l2_model.txt  l0learn_l0l2_model_verbose.csv
(+60 files in other folders)
